--- a/CrowderApp/app/src/main/res/values/strings.xml
+++ b/CrowderApp/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="profile_contact_info" >Contact Info</string>
     <string name="profile_email">Email</string>
     <string name="profile_phone">Phone Number</string>
+    <string name="blank">" "</string>
 </resources>
