--- a/CrowderApp/app/src/main/res/values/strings.xml
+++ b/CrowderApp/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="profile_email">Email</string>
     <string name="profile_phone">Phone Number</string>
     <string name="blank">" "</string>
+    <string name="all_experiments">All Experiments</string>
+    <string name="my_experiments">My Experiments</string>
+    <string name="profile">Profile</string>
 </resources>
