Added FAB, started creating of hamburger, starting creation of add experiment fragment

--- a/CrowderApp/app/src/main/res/values/strings.xml
+++ b/CrowderApp/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="all_experiments">All Experiments</string>
     <string name="my_experiments">My Experiments</string>
     <string name="profile">Profile</string>
+    <string name="add_experiment">Add Experiment</string>
 </resources>
