--- a/CrowderApp/app/src/main/res/values/strings.xml
+++ b/CrowderApp/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="trial_type">Trial Type</string>
     <string name="experiment_name">Name of Experiment</string>
     <string name="experiment_name2">Experiment Name</string>
+    <string name="search_username">Username:</string>
+    <string name="search_status">Status:</string>
 </resources>
