--- a/CrowderApp/app/src/main/res/values/strings.xml
+++ b/CrowderApp/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="experiment_name2">Experiment Name</string>
     <string name="search_username">Username:</string>
     <string name="search_status">Status:</string>
+    <string name="search_type">"Type: "</string>
 </resources>
