--- a/CrowderApp/app/src/main/res/values/strings.xml
+++ b/CrowderApp/app/src/main/res/values/strings.xml
@@ -16,4 +16,11 @@
     <string name="search_username">Username:</string>
     <string name="search_status">Status:</string>
     <string name="search_type">"Type: "</string>
+    <string name="quarter_1">Quarter 1</string>
+    <string name="quarter_3">Quarter 3</string>
+    <string name="_0">0</string>
+    <string name="quarter_2">Quarter 2</string>
+    <string name="median">Median</string>
+    <string name="mean">Mean</string>
+    <string name="std_dev">Std. Dev.</string>
 </resources>
