--- a/CrowderApp/app/src/main/res/values/strings.xml
+++ b/CrowderApp/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="mean">Mean</string>
     <string name="std_dev">Std. Dev.</string>
     <string name="qr_code">QR Code</string>
+    <string name="number_of_counts">Number of Counts:</string>
 </resources>
