--- a/CrowderApp/app/src/main/res/values/strings.xml
+++ b/CrowderApp/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="std_dev">Std. Dev.</string>
     <string name="qr_code">QR Code</string>
     <string name="number_of_counts">Number of Counts:</string>
+    <string name="deletableExpSuffix">__UI.TEST__</string>
 </resources>
