--- a/CrowderApp/app/src/main/res/values/strings.xml
+++ b/CrowderApp/app/src/main/res/values/strings.xml
@@ -33,4 +33,18 @@
     <string name="set_region_of_experiment">Set region of experiment</string>
     <string name="set_minimum_number_of_trials_for_experiment">Set minimum number of trials</string>
     <string name="set_the_name_of_the_experiment">Set the name of the Experiment</string>
+    <string name="included">Included</string>
+    <string name="reply">Reply</string>
+    <string name="loading">Loading...</string>
+    <string name="add_reply">Add Reply</string>
+    <string name="question">Question</string>
+    <string name="add_a_question">Add a Question</string>
+    <string name="average_per_trial">Average per Trial:</string>
+    <string name="integer_value">Integer Value</string>
+    <string name="enter">Enter</string>
+    <string name="non_neg">Non Neg</string>
+    <string name="number_of_measurements">Number of Measurements:</string>
+    <string name="average_per_measurement">Average per measurement:</string>
+    <string name="measurement_value">Measurement Value</string>
+    <string name="measure_trial">Measure Trial</string>
 </resources>
